Fix some spacing in style.css

--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@
     font-weight: normal;
     font-style: normal;
 }
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #030c1c;
+  background: #112 url(wall.webp) no-repeat center center fixed;
+  background-size: cover;
+  margin: 0;
 }
 
 .logo {
@@ -24,6 +27,7 @@ body {
   text-align: center;
   white-space: nowrap;
 }
+
 .logo span {
   display: block;
   position: relative;
@@ -32,6 +36,7 @@ body {
           backface-visibility: hidden;
   will-change: opacity;
 }
+
 .logo .open {
   transform: rotate(-1deg);
   color: #ffd9e2;
@@ -39,6 +44,7 @@ body {
   -webkit-animation: blink 4s infinite alternate;
           animation: blink 4s infinite alternate;
 }
+
 .logo .hrs {
   transform: rotate(1deg);
   font-size: 11vw;
@@ -59,6 +65,7 @@ body {
     opacity: 0.8;
   }
 }
+
 @-webkit-keyframes blink {
   40% {
     opacity: 1;
@@ -76,6 +83,7 @@ body {
     opacity: 1;
   }
 }
+
 @keyframes blink {
   40% {
     opacity: 1;
@@ -93,6 +101,7 @@ body {
     opacity: 1;
   }
 }
+
 @media screen and (min-width: 1000px) {
   .logo {
     width: 400px;
@@ -103,19 +112,13 @@ body {
     font-size: 103px;
   }
 }
+
 @font-face {
     font-family: 'neon_tubes_2regular';
     src: url('neontubes-webfont.woff2') format('woff2'),
          url('neontubes-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-}
-body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: #112 url(wall.webp) no-repeat center center fixed;
-  background-size: cover;
-  margin: 0;
 }
 
 .logo {
@@ -133,6 +136,7 @@ body {
   text-align: center;
   white-space: nowrap;
 }
+
 .logo span {
   display: block;
   position: relative;
@@ -141,6 +145,7 @@ body {
           backface-visibility: hidden;
   will-change: opacity;
 }
+
 .logo .open {
   transform: rotate(-1deg);
   color: #ffd9e2;
@@ -148,6 +153,7 @@ body {
   -webkit-animation: blink 4s infinite alternate;
           animation: blink 4s infinite alternate;
 }
+
 .logo .hrs {
   transform: rotate(1deg);
   font-size: 10vw;
@@ -162,6 +168,7 @@ body {
     opacity: 0.8;
   }
 }
+
 @keyframes blink {
   40% {
     opacity: 1;
@@ -179,6 +186,7 @@ body {
     opacity: 1;
   }
 }
+
 @media screen and (min-width: 800px) {
   .logo {
     width: 240px;
